feat(clans): optimize member permissions loading with single query